# search-next

./: .dockerignore  .env.development  .env.example  .env.production  .env.shared  .env.staging  .env.test  .gitignore  CHANGEMENTS_SOLR.txt  Dockerfile  Makefile  README.md  RECOMMENDATIONS.md  REDIS_INTEGRATION.md  SETUP_COMPLETE.md  check-config.sh  configure_env.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  final_check.py  test_frontend_fix.sh
docs/: ARCHITECTURE.md  CHANGELOG.md  CORS_CONFIGURATION.md  CORS_IMPLEMENTATION_SUMMARY.md  ENVIRONMENTS.md  ENVIRONMENT_MANAGEMENT_SUMMARY.md  INSTALL_PROD_NO_DOCKER.md  LOGGING.md  RECOMMENDATIONS.md  SETUP_COMPLETE.md
front-next/: README.md  package-lock.json  pnpm-lock.yaml
search_api_solr/: .dockerignore  .env.development  .env.example  .env.production  .env.staging  .env.test  .gitignore  DOCKER.md  DOCKER_SETUP.md  Dockerfile  ENVIRONMENTS.md  Makefile  SOLR_DISTANT.md  TESTING.md  debug_auth.py  debug_url.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  example_filter_usage.py  package-lock.json  pyproject.toml  pytest.ini  reproduce_search_500.py  requirements-dev.txt  requirements.txt  start.sh  test_api.sh  test_facets.py  test_facets_endpoint.py  test_field_config.py  test_filter_values.py  test_parser.py  test_platform_facets.py  test_solr_query_generation.py  test_subcategories.py
search_api_solr/alembic/: env.py
search_api_solr/alembic/versions/: 52562d213c85_initial_migration.py  b3e7f1a29d04_add_auth_provider_nullable_password.py
search_api_solr/app/: main.py  settings.py
search_api_solr/app/api/: auth.py
search_api_solr/app/api/v1/: saved_searches.py  search.py
search_api_solr/app/core/: config.py  dependencies.py  env_validation.py  exception_handlers.py  exceptions.py  logging.py  security.py
search_api_solr/app/db/: base_class.py  session.py
search_api_solr/app/models/: __init__.py  auth_models.py  document.py  logical_query.py  permissions_models.py  rate_limit_models.py  saved_search.py  search_models.py  user.py
search_api_solr/app/services/: cache_service.py  docs_permissions_client.py  document_mapper.py  facet_config.py  field_config.py  interfaces.py  ldap_service.py  oidc_service.py  query_logic_parser.py  search_builder.py  search_config.py  search_service.py  solr_client.py  solr_connector.py
search_api_solr/app/services/facets_json/: books.json  calenda.json  common.json  hypotheses.json  journals.json
search_api_solr/app/services/fields_json/: common.json
search_api_solr/nginx/: nginx.conf
search_api_solr/nginx/conf.d/: default.conf
search_api_solr/tests/: README.md  __init__.py  test_cache_service.py  test_endpoints.py  test_environment_config.py  test_error_handling.py  test_facet_config.py  test_features.py  test_qf_params.py  test_rate_limit_config.py  test_search_builder.py  test_search_get.py  test_sort.py  test_suggest_timeout.py
(+166 files in other folders)
